Refactor Domain Code